Projet GL/Projet_GL/src/test/deca/context/valid/increment2/bool-or.deca
// Test bool or bool

// Historique : cree le 10/01/2023

{
    boolean a = true || false;

    boolean b;

    b = a || true;
}