Projet GL/Projet_GL/src/test/deca/context/invalid/increment3/bool-sup-bool.deca
// test bool sup bool

// Historique : cree le 20/01/2023

{
    if (false > true){
        print("error");
    }
}